--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "sistema-juridico-frontend",
   "version": "1.0.0",
   "private": true,
-  "scripts": {    
-    "dev": "vite",
+  "scripts": {
+    "dev": "concurrently \"vite\" \"json-server --watch ./src/data/db.json --port 3000\"",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -32,6 +32,8 @@
     "postcss": "^8.5.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "concurrently": "^8.0.1",
+    "json-server": "^0.17.3"
   }
 }
