--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "@types/react-dom": "^18.3.7",
     "@types/selenium-webdriver": "^4.1.28",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^8.2.2",
+    "json-server": "^0.17.3",
     "npx": "^10.2.2",
     "postcss": "^8.5.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "vite": "^5.0.0",
-    "concurrently": "^8.0.1",
-    "json-server": "^0.17.3"
+    "vite": "^5.0.0"
   }
 }
